force-app/main/default/objects/TPM_Customer_Hierarchy_Staging__c/TPM_Customer_Hierarchy_Staging__c.object-meta.xml
<CustomObject>
    <description>Object that will serve as the staging table for Customer Hierarchy records received from Performance Analyzer</description>
    <label>Customer Hierarchy Staging</label>
    <nameField>
        <displayFormat>CH-{000000}</displayFormat>
        <label>Customer Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Hierarchy Staging</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>