force-app/main/default/objects/TPM_Customer_Hierarchy_Staging__c/fields/TPM_Child_Cust_HrLvl__c.field-meta.xml
<CustomField>
    <fullName>TPM_Child_Cust_HrLvl__c</fullName>
    <description>Hierarchy Level of the child customer</description>
    <label>Child Customer Hierarchy Level Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TPM_Customer_Level</valueSetName>
    </valueSet>
</CustomField>