force-app/main/default/objects/TPM_Customer_Hierarchy_Staging__c/fields/TPM_Child_Cust_NM__c.field-meta.xml
<CustomField>
    <fullName>TPM_Child_Cust_NM__c</fullName>
    <description>Name of the Child customer</description>
    <label>Child Customer Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>