force-app/main/default/objects/TPM_Customer_Hierarchy_Staging__c/fields/TPM_Child_Cust_Number__c.field-meta.xml
<CustomField>
    <fullName>TPM_Child_Cust_Number__c</fullName>
    <description>Number of the Child Customer</description>
    <label>Child Customer Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>