force-app/main/default/objects/TPM_Customer_Hierarchy_Staging__c/fields/TPM_Cust_Hrchy_End_DT__c.field-meta.xml
<CustomField>
    <fullName>TPM_Cust_Hrchy_End_DT__c</fullName>
    <description>End date of the customer hierarchy relationship</description>
    <label>Customer Hierarchy End Date</label>
    <type>Date</type>
</CustomField>