force-app/main/default/objects/TPM_Customer_Hierarchy_Staging__c/fields/TPM_Cust_Hrchy_Strt_Dt__c.field-meta.xml
<CustomField>
    <fullName>TPM_Cust_Hrchy_Strt_Dt__c</fullName>
    <description>Start date of the customer hierarchy relationship</description>
    <label>Customer Hierarchy Start Date</label>
    <type>Date</type>
</CustomField>