force-app/main/default/objects/TPM_Customer_Hierarchy_Staging__c/fields/TPM_External_ID__c.field-meta.xml
<CustomField>
    <fullName>TPM_External_ID__c</fullName>
    <description>External ID of the customer Hierarchy Staging record</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>