force-app/main/default/objects/TPM_Customer_Hierarchy_Staging__c/fields/TPM_Parnt_Cust_HrLvl__c.field-meta.xml
<CustomField>
    <fullName>TPM_Parnt_Cust_HrLvl__c</fullName>
    <description>Hierarchy Level of the Parent customer</description>
    <label>Parent Customer Hierarchy Level Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TPM_Customer_Level</valueSetName>
    </valueSet>
</CustomField>