force-app/main/default/objects/TPM_Customer_Hierarchy_Staging__c/fields/TPM_Parnt_Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>TPM_Parnt_Cust_ID__c</fullName>
    <description>External ID of the Parent customer</description>
    <label>Parent Customer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>