force-app/main/default/objects/TPM_Customer_Hierarchy_Staging__c/fields/TPM_Parnt_Cust_NM__c.field-meta.xml
<CustomField>
    <fullName>TPM_Parnt_Cust_NM__c</fullName>
    <description>Name of the Parent customer</description>
    <label>Parent Customer Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>